data/apps/argocd/excalidraw/install-kubectl/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: banner
  namespace: excalidraw
spec:
  plugin:
    rewritebody:
      lastModified: true
      rewrites:
        - regex: "<body>"
          replacement: '<body><style>#root{position:absolute !important;top:40px !important;height:calc(100% - 40px) !important;width:100% !important;}#subscription-banner{position:fixed !important;top:0 !important;left:0 !important;right:0 !important;height:40px !important;background-color:#0f766e !important;color:#ffffff !important;font-family:sans-serif !important;font-size:14px !important;font-weight:500 !important;display:flex !important;align-items:center !important;justify-content:center  [...]
